add mongolab uri to mongoid.yml

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -59,7 +59,7 @@ development:
 production:
   sessions:
     default:
-      uri: <%= ENV['MONGOHQ_URL'] %>
+      uri: <%= ENV['MONGOLAB_URI'] %>
 
 test:
   sessions:
